test/files/neg/macro-incompatible-macro-engine-c.scala
object Test extends App {
  MacroLibCompiledByScala210x.foo
}